--- a/templates/Main.html
+++ b/templates/Main.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <div class="jumbotron text-center bg-warning">
-  <h1>Hey, Welcome</h1>
-  <p>ASK the question, I'll try to answer them</p>
+  <h1>Simple Search Engine</h1>
+  <p>Developed in Flask and Python</p>
 </div>
 <section>
     <div class="container">
@@ -40,7 +40,7 @@
         <div class="row justify-content-center">
 
             <h3>Top RESULT</h3>
-            <div class="p-1">{{result}}</div>
+            <div class="p-1 col-12 text-center">{{result}}</div>
 
         </div>
        
